--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -5,6 +5,7 @@ Section: science
 Priority: optional
 Build-Depends: cmake,
                debhelper (>= 9),
+               pkg-config,
                python,
                libtinyxml2-dev,
                doxygen,
